[tool.poetry]
name = "meta_analysis"
version = "0.1.0"
description = ""
authors = ["tonyabracadabra <tongxupeng.cpu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
scipy = "^1.10.1"
pandas = "^2.1.2"
convex = "^0.5.0"
urllib3 = "1.26.15"
requests-toolbelt = "0.10.1"
dagster = "^1.5.9"
dagster-webserver = "^1.5.9"
dagster-pandas = "^0.21.9"
matchms = "0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
isort = "^5.12.0"
pandas-stubs = "1.5.3.230321"

[[tool.poetry.source]]
name = "grpcio"
url = "https://github.com/dagster-io/build-grpcio/wiki/Wheels"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "meta_analysis"